# streamflow-pyvenv-connector

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
examples/1000genome/: .gitignore  Dockerfile  LICENSE  README.md  config.yml  download_data.sh  main.cwl  streamflow.yml
examples/1000genome/clt/: frequency.cwl  get_chromosome.cwl  get_intervals.cwl  individuals.cwl  individuals_merge.cwl  mutation_overlap.cwl  sifting.cwl
examples/1000genome/scripts/: frequency.py  individuals  individuals_merge  mutation_overlap.py  sifting
examples/basic/: inputs.yml  main.cwl  step1.cwl  step2.cwl  step3.cwl  streamflow.yml
examples/streamflow/: step2.cwl  streamflow.yml
streamflow/plugins/unito/pyvenv/: connector.py  plugin.py
streamflow/plugins/unito/pyvenv/schemas/: pyvenv.json
