[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow-pyvenv-connector"
authors = [
    {name = "Tommaso Foglio Bonda", email = "tommaso.fogliobonda@unito.it"},
]
description = "StreamFlow Python Virtual Environment connector plugin"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["dependencies", "version"]

# [project.urls]
# Repository = "https://github.com/alpha-unito/streamflow-pyvenv-connector"

[project.entry-points]
"unito.streamflow.plugin" = {"unito.pyvenv" = "streamflow.plugins.unito.pyvenv.plugin:PyVenvStreamFlowPlugin"}

[tool.setuptools]
packages = [
    "streamflow",
    "streamflow.plugins", 
    "streamflow.plugins.unito",
    "streamflow.plugins.unito.pyvenv",
]
zip-safe = true
[tool.setuptools.package-data]
"streamflow.plugins.unito.pyvenv" = ["schemas/*.json"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "streamflow.plugins.unito.pyvenv.version.VERSION"}

[tool.setuptools.dynamic.optional-dependencies]
bandit = {file = "bandit-requirements.txt"}
lint = {file = "lint-requirements.txt"}
test = {file = "test-requirements.txt"}

[tool.isort]
profile = "black"
